--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "45e4476f",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-02-07 07:02:10.365741: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-02-07 07:02:10.397632: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2026-02-07 13:24:09.400207: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2026-02-07 13:24:09.838222: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-02-07 07:02:11.656395: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2026-02-07 13:24:11.238763: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     },
     {
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-02-07 07:02:12.931256: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+      "2026-02-07 13:24:12.627014: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8124ad3e",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4dcc2f28",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f4859f7a",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3f138e8e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "af7fcd2b",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6d055e52",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "a78051d0",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "56d8b338",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "8b8b6244",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "b80520ba",
    "metadata": {},
    "outputs": [
@@ -327,34 +327,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 13ms/step - loss: 0.9747\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.9859\n",
       "Epoch 2/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.7084\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.7011\n",
       "Epoch 3/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.6380\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.6344\n",
       "Epoch 4/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 13ms/step - loss: 0.5757\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.5806\n",
       "Epoch 5/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.5194\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 13ms/step - loss: 0.5262\n",
       "Epoch 6/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.4721\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.4773\n",
       "Epoch 7/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 13ms/step - loss: 0.4318\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.4351\n",
       "Epoch 8/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 13ms/step - loss: 0.3953\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 13ms/step - loss: 0.4013\n",
       "Epoch 9/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.3679\n",
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 14ms/step - loss: 0.3737\n",
       "Epoch 10/10\n",
-      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 13ms/step - loss: 0.3446\n"
+      "\u001b[1m2521/2521\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 14ms/step - loss: 0.3485\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x7e5513ac7da0>"
+       "<keras.src.callbacks.history.History at 0x7bb778d1ac00>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "9e6a4ec2",
    "metadata": {},
    "outputs": [
@@ -385,9 +385,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m631/631\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 827us/step - loss: 0.8451\n",
-      "Final Test MSE: 0.8451\n",
-      "RMSE: 0.9193\n"
+      "\u001b[1m631/631\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 950us/step - loss: 0.8253\n",
+      "Final Test MSE: 0.8253\n",
+      "RMSE: 0.9085\n"
      ]
     }
    ],
@@ -407,13 +407,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "4da1f7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982703</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964981247</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982224</td>\n",
+       "      <td>Heat (1995)</td>\n",
+       "      <td>Action|Crime|Thriller</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating  timestamp                    title  \\\n",
+       "0       1        1     4.0  964982703         Toy Story (1995)   \n",
+       "1       1        3     4.0  964981247  Grumpier Old Men (1995)   \n",
+       "2       1        6     4.0  964982224              Heat (1995)   \n",
+       "\n",
+       "                                        genres  \n",
+       "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "1                               Comedy|Romance  \n",
+       "2                        Action|Crime|Thriller  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "dc82c03e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m304/304\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 558us/step\n",
+      "Movie Vector Shape: (9724, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Top K-Recommendation test using Retrieval and Ranking method \n",
+    "# first we need to prepare a unique movies and their corresponding genre features to create the \n",
+    "unique_movies = data[[\"movieId\", \"title\", \"genres\"]].drop_duplicates(\"movieId\")\n",
+    "\n",
+    "# Gets the features ready for the model\n",
+    "MovieIds = unique_movies[\"movieId\"].values\n",
+    "genres = unique_movies[\"genres\"].str.get_dummies(sep=\"|\").values\n",
+    "\n",
+    "# create the movie matrix\n",
+    "movie_vectors = movie_tower_model.predict(\n",
+    "    [MovieIds, genres], verbose=1\n",
+    ")\n",
+    "\n",
+    "print(f\"Movie Vector Shape: {movie_vectors.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "508f022d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(movie_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fb152375",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.6952124 4.2724767 3.7920017 4.3589573 4.332677 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = 1\n",
+    "user_vec = user_tower_model.predict(np.array([user_id]), verbose=0)\n",
+    "scores = np.dot(user_vec, movie_vectors.T)\n",
+    "print(scores[0][:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "39645d54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top K-Recommendation test using Retrieval and Ranking method"
+    "# select userId and recommend\n",
+    "def recommend_top_k(user_id, k = 5):\n",
+    "    # create user vector for selected user Id\n",
+    "    user_vec = user_tower_model(np.array([user_id]), verbose=0)\n",
+    "\n",
+    "    # calculate dot product which are scores\n",
+    "    scores = np.dot(user_vec, movie_vectors.T)\n",
+    "\n",
+    "    # get the indices from scores\n",
+    "    top_indices = np.argsort(scores[0])[-k:][::-1] #argsort sorts low to high, we will take the last k and reverse them\n",
+    "\n",
+    "    # Map indices back into MoviesId and title\n",
+    "    recommended_ids = MovieIds[top_indices]\n",
+    "    recommended_titles = unique_movies[unique_movies[\"movieId\"].isin(recommended_ids)][\"title\"].values\n",
+    "\n",
+    "    return recommended_titles, recommended_ids"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "167301d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The Jinx: The Life and Deaths of Robert Durst (2015)\n",
+      "2. I Am a Sex Addict (2005)\n",
+      "3. Connections (1978)\n",
+      "4. Blue Planet II (2017)\n",
+      "5. De platte jungle (1978)\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommended_movies, recommended_ids = recommend_top_k(2, k = 5)\n",
+    "for i, title in enumerate(recommended_movies):\n",
+    "    print(f\"{i + 1}. {title}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1cd4aacd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 title  rating  \\\n",
+      "241                               Step Brothers (2008)     5.0   \n",
+      "254                    Wolf of Wall Street, The (2013)     5.0   \n",
+      "260  The Jinx: The Life and Deaths of Robert Durst ...     5.0   \n",
+      "250                                     Warrior (2011)     5.0   \n",
+      "248                                  Inside Job (2010)     5.0   \n",
+      "259                          Mad Max: Fury Road (2015)     5.0   \n",
+      "240                            Dark Knight, The (2008)     4.5   \n",
+      "247                                   Town, The (2010)     4.5   \n",
+      "242                        Inglourious Basterds (2009)     4.5   \n",
+      "234                           Good Will Hunting (1997)     4.5   \n",
+      "\n",
+      "                               genres  \n",
+      "241                            Comedy  \n",
+      "254                Comedy|Crime|Drama  \n",
+      "260                       Documentary  \n",
+      "250                             Drama  \n",
+      "248                       Documentary  \n",
+      "259  Action|Adventure|Sci-Fi|Thriller  \n",
+      "240           Action|Crime|Drama|IMAX  \n",
+      "247              Crime|Drama|Thriller  \n",
+      "242                  Action|Drama|War  \n",
+      "234                     Drama|Romance  \n"
+     ]
+    }
+   ],
+   "source": [
+    "top_movies = data[data[\"userId\"]==2].sort_values(by=\"rating\", ascending=False)\n",
+    "print(top_movies[[\"title\", \"rating\", \"genres\"]].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e618b866",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
